# video-orchestration-ai

./: .dockerignore  .env.example  .gitignore  =0.20  AGENTS.md  CLAUDE.md  CLAUDE.md.bak-1782733835  Context.md  Dockerfile  MISSION.md  README.md  RESOURCES.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
config/: agents.yaml  judge.yaml  pipeline.yaml  providers.yaml
config-mock/: agents.yaml  pipeline.yaml  providers.yaml
docs/: ADR-D29-agent-executions-over-tools.md  ADR-D30-media-storage-r2-db.md  ADR-D31-agentic-execution.md  ADR-D36-cloudflare-aws-portability.md  DECISIONS.md  DEMO.md  FLOW_MINDMAP.md  PROGRESS-D29-agent-execution-migration.md  PROGRESS.md  architecture.excalidraw  project-architecture.architecture.json  project-architecture.html  project-flow.html  project-flow.workflow.json
front/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
front/scripts/: check-boundaries.mjs
front/src/: index.css  main.tsx  router.tsx  types.ts
front/src/api/: urls.ts  (+5 more)
lessons/: 0001-como-o-motor-gera-imagem-e-voz.html
reference/: ugc-orchestrator-map.html
scripts/: vercel_generate_video.mjs
src/orchestrator/: agent_catalog.py  cli.py  config.py  creator_store.py  feedback_store.py  logging_config.py  media_store.py  prompt_store.py  registry.py  runner.py  stage_executor.py  stream_bus.py  tracing.py
tests/: conftest.py  test_adapters_mock.py  test_agent_catalog.py  test_agent_loop.py  test_anthropic_llm.py  test_approval_gate.py  test_artifact_db.py  test_builder.py  test_checkpoint.py  test_cli.py  test_concept_bias.py  test_config_paths.py  test_creator_real.py  test_creator_store.py  test_feedback_loop.py  test_feedback_store.py  test_gateway_llm.py  test_graph_e2e.py  test_integrity_qc.py  test_judge_eval.py  test_live_config_no_mock.py  test_llm_usage_cost.py  test_logging_config.py  test_media_persistence_wiring.py  test_media_store.py  test_persona.py  test_r2_storage.py  test_registry_composite.py  test_replicate_throttle.py  test_replicate_upscale.py  test_replicate_video.py  test_replicate_voice.py  test_resume_partial.py  test_retention.py  test_retention_wiring.py  test_retry.py  test_routing.py  test_run_cycles.py  test_scope_eval.py  test_server_signed_urls.py  (+19 more)
(+79 files in other folders)
