[project]
name = "ugc-orchestrator"
version = "0.1.0"
description = "Motor de orquestração (LangGraph) para a pipeline de AI UGC em escala — v1 mock/dry-run."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.140",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "httpx>=0.27",
    "anthropic>=0.40",
    "replicate>=1.0",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
orchestrator = "orchestrator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=orchestrator --cov-report=term-missing"

[tool.coverage.run]
source = ["src/orchestrator"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
